--- a/package.json
+++ b/package.json
@@ -5,5 +5,25 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express.js": "^1.0.0"
-  }
+  },
+  "name": "marvel-backend",
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/brunohenrion/marvel-backend.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/brunohenrion/marvel-backend/issues"
+  },
+  "homepage": "https://github.com/brunohenrion/marvel-backend#readme"
 }
